Fix use of identity hashcodes on monitor tables and also restrict hash mode to '6' when using COH.