@@ -48,39 +48,42 @@ public class ObjectHashCode {
     }
 
     // Experimental hashCode generation schemes. See synchronizer.cpp get_next_hash
+    // Note: UseCompactObjectHeaders is disabled for these forks. Under UCOH only
+    // hashCode==6 is permitted (see Arguments::set_compact_headers_flags); the
+    // non-idempotent generators would otherwise refuse to launch.
     /*
     @Benchmark
-    @Fork(jvmArgs = {"-XX:+UnlockExperimentalVMOptions", "-XX:hashCode=0"})
+    @Fork(jvmArgs = {"-XX:+UnlockExperimentalVMOptions", "-XX:-UseCompactObjectHeaders", "-XX:hashCode=0"})
     public int mode_0() {
         return System.identityHashCode(new Object());
     }
 
     @Benchmark
-    @Fork(jvmArgs = {"-XX:+UnlockExperimentalVMOptions", "-XX:hashCode=1"})
+    @Fork(jvmArgs = {"-XX:+UnlockExperimentalVMOptions", "-XX:-UseCompactObjectHeaders", "-XX:hashCode=1"})
     public int mode_1() {
         return System.identityHashCode(new Object());
     }
 
     @Benchmark
-    @Fork(jvmArgs = {"-XX:+UnlockExperimentalVMOptions", "-XX:hashCode=2"})
+    @Fork(jvmArgs = {"-XX:+UnlockExperimentalVMOptions", "-XX:-UseCompactObjectHeaders", "-XX:hashCode=2"})
     public int mode_2() {
         return System.identityHashCode(new Object());
     }
 
     @Benchmark
-    @Fork(jvmArgs = {"-XX:+UnlockExperimentalVMOptions", "-XX:hashCode=3"})
+    @Fork(jvmArgs = {"-XX:+UnlockExperimentalVMOptions", "-XX:-UseCompactObjectHeaders", "-XX:hashCode=3"})
     public int mode_3() {
         return System.identityHashCode(new Object());
     }
 
     @Benchmark
-    @Fork(jvmArgs = {"-XX:+UnlockExperimentalVMOptions", "-XX:hashCode=4"})
+    @Fork(jvmArgs = {"-XX:+UnlockExperimentalVMOptions", "-XX:-UseCompactObjectHeaders", "-XX:hashCode=4"})
     public int mode_4() {
         return System.identityHashCode(new Object());
     }
 
     @Benchmark
-    @Fork(jvmArgs = {"-XX:+UnlockExperimentalVMOptions", "-XX:hashCode=5"})
+    @Fork(jvmArgs = {"-XX:+UnlockExperimentalVMOptions", "-XX:-UseCompactObjectHeaders", "-XX:hashCode=5"})
     public int mode_5() {
         return System.identityHashCode(new Object());
     }
